[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spatiold"
version = "0.1.0"
description = "Spatial local diversity analysis for spatial transcriptomics"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Tianxiao Zhao", email = "Tianxiao.Zhao@nyulangone.org" },
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "anndata>=0.10",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "statsmodels>=0.14",
  "matplotlib-venn>=0.11",
  "scanpy>=1.10"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
spatiold-pipeline = "spatiold.cli:main"
spatiold-pipeline-slim = "spatiold.cli:main_slim"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["test"]
pythonpath = ["src"]
